test/compilable/extra-files/rdeps7016b.d
module rdeps7016b;

int i = 42;

int g()
{
    import rdeps7016;
    return i;
}
