test/fail_compilation/fail70.d

const int z;

static this()
{
    z = 3;
}

int main()
{
    z = 4;

    return 0;
}

